# z_temp-sense

./: .clang-format  CMakeLists.txt  overlay.dts  prj.conf
boards/st/ATS_STM32/: ATS_STM32.dts  board.cmake
boards/st/vcu_stm32_not_used/: Kconfig.defconfig  Kconfig.vcu_stm32  README.md  board.cmake
boards/st/vcu_stm32_test_copied_nucleo_not_used/: board.yml
decoder_generated/: hv500_can2_map_v25_sid.c  hv500_can2_map_v25_sid.h
include/: APPS.h  CanInitializer.h  ProjectIncludes.h  adc.h  can.h  vehicle_state.h  zephyr-common.h
src/: APPS.cpp  CanInitializer.c  CanInitializer.cpp  PedalSensors.h  adc.cpp  can.cpp  dti_encoders.cpp  main.c  main.cpp
src/threads/: system.cpp
unused/: 2024_car_can1.c  2024_car_can1.h
